# Portfolio

./: README.md
Arduino/: EstacionMetereologica_Sensordegas_ESP32NodeMCU.ino  MODELO_AUTOMATICO_NANOBLE.ino  Voltimetro_UNO.ino  giroscopio_NANOBLE.ino
C#/: HolaMundo.cs  ObjetoPersona
C++/Add_Two_Numbers/: Add_Two_Numbers.cpp  CODE  README.md
C++/BitStream_Implementation/BASE_FILES/: CMakeLists.txt  README.md  reference.hpp  reference_ORIGINAL.hpp  test.cpp
C++/Clases_objetos/: Makefile  Nota.txt  Readme.txt  Tarea01.html  implementacion.cpp  main.cpp  newton.h
C++/INHERITANCE_Energy_Generation/: CLASS.cpp  CLASS.h  main.cpp
C++/INHERITANCE_Numeric_methods/: Main  Makefile  Newton_Raphson_Method.cpp  Newton_Raphson_Method.h  README.md  main.cpp
C++/Poliformismo/: Makefile  Nota.txt  README.txt  clases.cpp  clases.h  main.cpp
C++/Two_Sum/: CODE  README.md  Two_Sum.cpp
C/Add_Two_Numbers_LL/: Add_Two_Numbers.c  CODE
C/Algorithm_practice/: libreria.c  libreria.h  main.c
C/Aritméticos_básicos/: Capicua.c  cadena.c  matriz.c  maze.c  metodosbubblequicksort.c  piramide.c  primos.c  suma.c
C/Copy_List_with_Random_Pointer/: Deep_Copy.c  Deep_Copy.h  main.c
C/Embedded_Software_practice/: Bit_manipulation.c  Circular_buffer.c  Pointer_Arithmetic.c  Volatile_flag.c  bit_manipu
C/Librería_llamada_main/: lista.c  lista.h  main.c
C/Make_Array_Zero/: Make_Array_Zero_By_Substracting.c  README.md
C/Memory_managment_embedded_systems/: MEM_ADMINISTATOR  MEM_management.c  README.md
Generalist_Trigger_Test/: .env  Anthropickey.txt  config.py  main.py
(+173 files in other folders)
